--- a/src/css/ProductPreviewItem.module.css
+++ b/src/css/ProductPreviewItem.module.css
@@ -1,17 +1,24 @@
 .productPreviewItem{
     border: 1px solid lightgray;
     padding: 1em;
+    height: 40vh;
+}
+.descriptionContainer{
+  display: flex;
+  text-align: left;
+  margin: 0;
 }
 .mainImage{
   width: 100%;
+  height: 85%;
   object-fit: cover;
 }
 .colorsPreview{
-  display: flex;
-  width:100%;
-}
-.colorsPreview{
-  width: 25%;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(10%, 1fr));
+  list-style-type: none;
+  margin: 0;
+  margin-left: 0;
 }
 
 .colorPreviewImg{
