--- a/src/css/Products.module.css
+++ b/src/css/Products.module.css
@@ -1,6 +1,7 @@
 .products{
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(33%, 1fr));
+  grid-template-rows: auto;
   width: 65em;
   grid-template-rows: auto;
   text-align: center;
