--- a/src/css/Products.module.css
+++ b/src/css/Products.module.css
@@ -1,3 +1,7 @@
+.productsPageContainer{
+  display: flex;
+}
+
 .products{
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(33%, 1fr));
