product preview item and accent color vs regular in product styling

--- a/src/css/ProductPreviewItem.module.css
+++ b/src/css/ProductPreviewItem.module.css
@@ -4,8 +4,19 @@
     height: 55vh;
 }
 .descriptionContainer{
-  display: flex;
   text-align: left;
+  margin: 0;
+}
+
+.descriptionContainer p{
+  margin: 0;
+}
+
+.descriptionContainer b{
+  margin: 0;
+}
+.descriptionContainer a{
+  text-decoration: none;
   margin: 0;
 }
 .mainImage{
@@ -26,6 +37,13 @@
   border-radius: 100%;
   margin: .1em;
 }
+
+/* .colorsPreview li {
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  height: 100%;
+} */
 
 .link{
   text-decoration: none;
