--- a/src/css/Products.module.css
+++ b/src/css/Products.module.css
@@ -5,9 +5,10 @@
 .products{
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(33%, 1fr));
-  grid-template-rows: auto;
+  grid-template-rows: repeat(auto-fill, minmax(45vh, 1fr));
+
   width: 65em;
-  grid-template-rows: auto;
+
   text-align: center;
   margin: auto;
 }
