--- a/src/css/ImageCarousel.module.css
+++ b/src/css/ImageCarousel.module.css
@@ -1,4 +1,6 @@
-
+.imageCarousel{
+  height: 50%;
+}
 
 .mainImage{
   width: 100%;
@@ -6,6 +8,7 @@
 
 .thumbnailImages{
   display: flex;
+  height: 20%;
   width: 100%;
   overflow: hidden;
   align-items: center;
@@ -14,4 +17,25 @@
 .thumbnailImage{
   width: 20%;
   margin: .1rem;
+  cursor: pointer;
+}
+.showAllBtn{
+  width: 20%;
+  height: 100%;
+  background-color: grey;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  opacity: 65%;
+}
+
+.showAllBtn:hover{
+  cursor: pointer;
+  width: 20%;
+  height: 100%;
+  background-color: grey;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  opacity: 85%;
 }
