--- a/src/css/Product.module.css
+++ b/src/css/Product.module.css
@@ -31,6 +31,7 @@ a:visited {
 }
 
 .colorItem{
+  cursor: pointer;
   text-align: center;
   display: flex;
   flex-direction: column;
@@ -51,7 +52,7 @@ a:visited {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: end;
+  justify-content: start;
 }
 
 .pdfContainer{
