--- a/src/css/ProductPreviewItem.module.css
+++ b/src/css/ProductPreviewItem.module.css
@@ -2,6 +2,10 @@ a:visited {
   color: black;
 }
 
+i{
+  display: block;
+}
+
 .productPreviewItem{
     border: 1px solid lightgray;
     padding: 1em;
@@ -38,6 +42,7 @@ a:visited {
 
 .colorPreviewImg{
   width: 100%;
+  height: 100%;
   border-radius: 100%;
   margin: .1em;
 }
@@ -52,6 +57,10 @@ a:visited {
 .link{
   text-decoration: none;
   color: black;
+}
+
+.productName{
+  font-size: 20px;
 }
 
 .productCategory{
