--- a/src/css/Filter.module.css
+++ b/src/css/Filter.module.css
@@ -6,6 +6,8 @@
 .filterContainer li{
   list-style-type: none;
   border: 1px solid black;
+  margin: 1rem;
+  padding: 1rem;
 }
 
 .filterContainer a{
