--- a/src/css/Products.module.css
+++ b/src/css/Products.module.css
@@ -15,3 +15,39 @@
   text-align: center;
   margin: auto;
 }
+
+.filterContainer{
+  position: sticky;
+  top: 0;
+}
+
+
+
+.category{
+  cursor: pointer;
+  list-style-type: none;
+  border: 1px solid black;
+  margin: 1rem;
+  padding: 1rem;
+}
+
+.activeCategory{
+  cursor: pointer;
+  list-style-type: none;
+  border: 1px solid black;
+  margin: 1rem;
+  padding: 1rem;
+  background-color: grey;
+}
+
+.filterContainer li:hover{
+  list-style-type: none;
+  border: 1px solid black;
+  background-color: grey;
+  margin: 1rem;
+  padding: 1rem;
+}
+
+.filterContainer a{
+  text-decoration: none;
+}
