product preview item size set with individual item, not grid-row height

--- a/src/css/ProductPreviewItem.module.css
+++ b/src/css/ProductPreviewItem.module.css
@@ -9,7 +9,8 @@ i{
 .productPreviewItem{
     border: 1px solid lightgray;
     padding: 1em;
-    height: 55vh;
+    height: 65vh;
+    /* width: 100%; */
 }
 .descriptionContainer{
   text-align: left;
