--- a/src/css/ImageCarousel.module.css
+++ b/src/css/ImageCarousel.module.css
@@ -23,7 +23,8 @@
 .showAllBtn{
   width: 20%;
   height: 100%;
-  background-color: grey;
+  background-color: rgb(226, 224, 224);
+  opacity: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -35,6 +36,7 @@
   width: 20%;
   height: 100%;
   background-color: grey;
+  opacity:75%;
   display: flex;
   align-items: center;
   justify-content: center;
