--- a/src/css/Product.module.css
+++ b/src/css/Product.module.css
@@ -4,7 +4,8 @@ a:visited {
 
 .productContainer{
   margin-top:15%;
-  width: 65%;
+  height: 100%;
+  width: 75%;
   display: grid;
   grid-template-columns: repeat(10, 1fr);
   gap: 10px;
@@ -13,6 +14,8 @@ a:visited {
 }
 
 .productImages{
+  top: 0;
+  position: sticky;
   grid-column: 1/6;
   margin-top: 15%;
 }
@@ -21,6 +24,7 @@ a:visited {
   margin-top: 15%;
   margin-left: 8%;
   grid-column: 6/11;
+  height: 100%;
 }
 .colorsContainer{
   display: grid;
