--- a/src/css/Products.module.css
+++ b/src/css/Products.module.css
@@ -11,6 +11,7 @@
   grid-template-columns: repeat(auto-fill, minmax(33%, 1fr));
   /* grid-template-rows: repeat(auto-fill, minmax(55vh, 1fr)); */
   text-align: center;
+  width: 100%;
   margin: auto;
 }
 
