--- a/src/css/Product.module.css
+++ b/src/css/Product.module.css
@@ -29,8 +29,9 @@ a:visited {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(20%, 1fr));
 }
+
 .colorImage{
-  width: 85%;
+  width: 100%;
 }
 
 .colorItem{
@@ -40,6 +41,7 @@ a:visited {
   flex-direction: column;
   align-items: center;
   justify-content: start;
+  margin-right: 2%;
 }
 
 .sizesContainer{
@@ -47,7 +49,7 @@ a:visited {
   grid-template-columns: repeat(auto-fill, minmax(25%, 1fr));
 }
 .sizeImage{
-  width: 85%;
+  width: 100%;
 }
 
 .sizeItem{
@@ -56,6 +58,7 @@ a:visited {
   flex-direction: column;
   align-items: center;
   justify-content: start;
+  margin-right: 2%;
 }
 
 .pdfContainer{
