--- a/src/css/Product.module.css
+++ b/src/css/Product.module.css
@@ -58,6 +58,7 @@ a:visited {
   flex-direction: column;
   align-items: center;
   justify-content: start;
+  border: 1px solid lightgrey;
   margin-right: 2%;
 }
 
@@ -67,7 +68,7 @@ a:visited {
   text-decoration: none;
   box-sizing: border-box;
   display: flex;
-  border: 1px solid black;
+  border: 1px solid lightgray;
 }
 
 .pdfContainer:hover{
@@ -75,7 +76,7 @@ a:visited {
   text-decoration: none;
   box-sizing: border-box;
   display: flex;
-  border: 1px solid black;
+  border: 1px solid lightgray;
   background-color: grey;
 }
 
