--- a/src/css/Product.module.css
+++ b/src/css/Product.module.css
@@ -63,8 +63,10 @@ a:visited {
 }
 
 .pdfContainer{
+  width: 25%;
   text-decoration: none;
-  justify-content: center;
+  padding: 1%;
+  justify-content: space-between;
   text-decoration: none;
   box-sizing: border-box;
   display: flex;
@@ -72,11 +74,6 @@ a:visited {
 }
 
 .pdfContainer:hover{
-  justify-content: center;
-  text-decoration: none;
-  box-sizing: border-box;
-  display: flex;
-  border: 1px solid lightgray;
   background-color: grey;
 }
 
