--- a/src/css/ProductPreviewItem.module.css
+++ b/src/css/ProductPreviewItem.module.css
@@ -43,6 +43,11 @@ i{
   padding-left: 0;
 }
 
+.colorPreview{
+  width: 100%;
+  height: 100%;
+}
+
 .colorPreviewImg{
   width: 100%;
   height: 100%;
