logo image set to 100 percent width

--- a/src/css/Product.module.css
+++ b/src/css/Product.module.css
@@ -35,6 +35,10 @@ color: black;
   display: flex;
   justify-content: space-between;
 }
+
+.logo{
+  width: 100%;
+}
 .colorsContainer{
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(20%, 1fr));
