--- a/src/css/Product.module.css
+++ b/src/css/Product.module.css
@@ -5,10 +5,15 @@ a:visited {
 a{
 color: black;
 }
-
-h4{
+h4, h1, b{
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
 }
+
+
+p{
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 
 .productContainer{
   margin-top:15%;
@@ -87,9 +92,10 @@ h4{
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: start;
+  justify-content: space-between;
   border: 1px solid lightgrey;
   margin-right: 2%;
+  padding: 3%;
 }
 
 .pdfContainer{
