--- a/src/css/Product.module.css
+++ b/src/css/Product.module.css
@@ -9,6 +9,10 @@ h4, h1, b, p{
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif !important
 }
 
+h1{
+  margin:0;
+}
+
 
 p{
   font-family: Arial, Helvetica, sans-serif;
@@ -54,7 +58,7 @@ p{
 }
 
 .logo{
-  width: 100%;
+  width: 35%;
 }
 .typeContainer{
   padding-top: 1%;
