--- a/src/css/Filter.module.css
+++ b/src/css/Filter.module.css
@@ -3,6 +3,10 @@
   top: 0;
 }
 
+#menuIcon{
+  display:none;
+}
+
 .category{
   cursor: pointer;
   list-style-type: none;
@@ -30,4 +34,48 @@
 
 .filterContainer a{
   text-decoration: none;
+}
+
+@media (max-width:480px){
+  .filterContainer{
+    position: sticky;
+    top: 0;
+  }
+
+  #menuIcon{
+    display:block;
+  }
+
+  .category{
+    cursor: pointer;
+    list-style-type: none;
+    border: 1px solid black;
+    margin: 1rem;
+    padding: 1rem;
+  }
+
+  .navLinks{
+    display: none;
+  }
+
+  .activeCategory{
+    cursor: pointer;
+    list-style-type: none;
+    border: 1px solid black;
+    margin: 1rem;
+    padding: 1rem;
+    background-color: grey;
+  }
+
+  .filterContainer li:hover{
+    list-style-type: none;
+    border: 1px solid black;
+    background-color: grey;
+    margin: 1rem;
+    padding: 1rem;
+  }
+
+  .filterContainer a{
+    text-decoration: none;
+  }
 }
