outdoor libing kits category added

--- a/src/css/ImageCarousel.module.css
+++ b/src/css/ImageCarousel.module.css
@@ -50,6 +50,7 @@
 
 .thumbnailImages{
   display: flex;
+  justify-content: center;
   transition: transform 0.5s ease;
   width: 100%;
   overflow: hidden;
