--- a/src/css/Products.module.css
+++ b/src/css/Products.module.css
@@ -43,6 +43,14 @@
   background-color: grey;
 }
 
+.filterContainer li{
+  list-style-type: none;
+  border: 1px solid black;
+  background-color: rgba(0, 0, 0, 0.5);
+  margin: 1rem;
+  padding: 1rem;
+}
+
 .filterContainer li:hover{
   list-style-type: none;
   border: 1px solid black;
