--- a/src/css/ImageCarousel.module.css
+++ b/src/css/ImageCarousel.module.css
@@ -9,6 +9,7 @@
 }
 
 .mainImage{
+  object-fit: cover;
   height: 40rem;
   width: 100%;
 }
@@ -50,7 +51,7 @@
 
 .thumbnailImages{
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   transition: transform 0.5s ease;
   width: 100%;
   overflow: hidden;
@@ -73,6 +74,20 @@
   background-color: grey;
   opacity:75%;
 }
+
+.arrowContainer{
+  color: white;
+  padding: 2%;
+  border-radius: .5rem;
+  background-color: rgba(0, 0, 0, 0.466);
+}
+
+.arrowContainer:hover{
+  background-color: rgb(51, 51, 51);
+  opacity:75%;
+}
+
+
 
 @media (max-width:480px){
   .thumbnailImages{
