--- a/src/css/Products.module.css
+++ b/src/css/Products.module.css
@@ -1,7 +1,7 @@
 .productsPageContainer{
   display: flex;
   justify-content: center;
-  width: 75%;
+  width: 100%;
   height: 100%;
   margin: auto;
 }
@@ -12,10 +12,14 @@
   /* grid-template-rows: repeat(auto-fill, minmax(55vh, 1fr)); */
   text-align: center;
   width: 100%;
-  margin: auto;
+  margin: 0;
 }
 
 .filterContainer{
+  text-align: left;
+  background-color: #081a3a;
+  width: 33%;
+  height: 100vh;
   position: sticky;
   top: 0;
 }
@@ -29,7 +33,6 @@
 .category{
   cursor: pointer;
   list-style-type: none;
-  border: 1px solid black;
   margin: 1rem;
   padding: 1rem;
 }
@@ -37,16 +40,16 @@
 .activeCategory{
   cursor: pointer;
   list-style-type: none;
-  border: 1px solid black;
+  border-bottom: 1px solid white;
   margin: 1rem;
   padding: 1rem;
-  background-color: grey;
 }
 
 .filterContainer li{
+  color: white;
   list-style-type: none;
-  border: 1px solid black;
-  background-color: rgba(0, 0, 0, 0.5);
+  /* border: 1px solid black;
+  background-color: rgba(0, 0, 0, 0.288); */
   margin: 1rem;
   padding: 1rem;
 }
@@ -61,6 +64,16 @@
 
 .filterContainer a{
   text-decoration: none;
+}
+
+.navLinks{
+  top: 0;
+  position: sticky;
+}
+
+.navLinksActive{
+  top: 0;
+  position: sticky;
 }
 
 @media (max-width:480px){
