--- a/src/css/ProductPreviewItem.module.css
+++ b/src/css/ProductPreviewItem.module.css
@@ -36,6 +36,7 @@ i{
   object-fit: cover;
 }
 .colorsPreview{
+  background-color: white;
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(10%, 1fr));
   grid-template-rows: 100%;
