--- a/src/css/Products.module.css
+++ b/src/css/Products.module.css
@@ -24,6 +24,16 @@
   top: 0;
 }
 
+.filterContainerActive{
+  text-align: left;
+  background-color: #081a3a;
+  width: 33%;
+  height: 100vh;
+  position: sticky;
+  top: 0;
+}
+
+
 #menuIcon{
   display:none;
 }
@@ -62,6 +72,11 @@
   padding: 1rem;
 }
 
+.category{
+  color: white;
+}
+
+
 .filterContainer a{
   text-decoration: none;
 }
@@ -69,6 +84,12 @@
 .navLinks{
   top: 0;
   position: sticky;
+}
+
+
+
+.filterContainer{
+  background-color: #081a3a;
 }
 
 
@@ -93,22 +114,6 @@
     display: none;
   } */
 
-  .category{
-    cursor: pointer;
-    list-style-type: none;
-    border: 1px solid black;
-    margin: 1rem;
-    padding: 1rem;
-  }
-
-  .activeCategory{
-    cursor: pointer;
-    list-style-type: none;
-    border: 1px solid black;
-    margin: 1rem;
-    padding: 1rem;
-    background-color: grey;
-  }
 
   .filterContainer{
     position: absolute;
@@ -116,20 +121,30 @@
   }
 
   .filterContainerActive{
-    position: absolute;
     background-color: #081a3a;
+    text-align: left;
+    position: absolute;
 
-  }
-
-  .filterContainer li:hover{
-    list-style-type: none;
-    border: 1px solid black;
-    background-color: grey;
-    margin: 1rem;
-    padding: 1rem;
   }
 
   .filterContainer a{
     text-decoration: none;
   }
+  .category{
+    color: white;
+  }
+
+  .navLinks{
+    padding: 0;
+    top: 0;
+    position: sticky;
+  }
+
+  .activeCategory{
+    color: white;
+  }
+
+
+
+
 }
