--- a/src/css/Products.module.css
+++ b/src/css/Products.module.css
@@ -95,6 +95,7 @@
 
 @media (max-width:480px){
   .productsPageContainer{
+    justify-content: start;
     position: absolute; /* This creates a positioning context */
     overflow: auto; /* Enable scrolling within the container */
     max-height: 100vh;
