add product breadcrumbs

--- a/src/css/Product.module.css
+++ b/src/css/Product.module.css
@@ -18,6 +18,10 @@ p{
   font-family: Arial, Helvetica, sans-serif;
 }
 
+.breadcrumbs{
+  display: flex;
+}
+
 
 .productContainer{
   margin-top:15%;
