--- a/src/css/ProductPreviewItem.module.css
+++ b/src/css/ProductPreviewItem.module.css
@@ -70,3 +70,23 @@ i{
 .productCategory{
   margin-left: 1rem;
 }
+
+@media (max-width:480px) {
+  .productPreviewItem{
+    border: 1px solid lightgray;
+    padding: 1em;
+    height: 55vh;
+    overflow: hidden;
+
+}
+.productName{
+  font-size: 16px;
+}
+
+.mainImage{
+  width: 100%;
+  height: 75%;
+  object-fit: cover;
+}
+
+}
