product loading spinner displays correctly

--- a/src/css/Products.module.css
+++ b/src/css/Products.module.css
@@ -8,6 +8,7 @@
 }
 
 .products{
+  position: relative;
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(33%, 1fr));
   /* grid-template-rows: repeat(auto-fill, minmax(55vh, 1fr)); */
