--- a/src/css/ImageCarousel.module.css
+++ b/src/css/ImageCarousel.module.css
@@ -101,6 +101,9 @@
     width: 100%;
     overflow: hidden;
     align-items: center;
-    justify-content: center;
+    justify-content: space-around;
+  }
+  .mainImage{
+    height: 30rem;
   }
 }
